--- a/src/Components/empsignup/Empreg.css
+++ b/src/Components/empsignup/Empreg.css
@@ -1,4 +1,4 @@
-.con1{
+/* .con1{
     background-color: #F8F8FB;
     width: 805px;
     height: 255px;
@@ -28,7 +28,7 @@
     border-radius: 15px;
     margin-bottom: 200px;
 
-}
+} */
 .input{
     border-color:  #8F8C8C;
 }
